remove install.sh

--- a/hv_client/config.json
+++ b/hv_client/config.json
@@ -1,4 +1,4 @@
 {
-    "server_url": "http://host:5000/log",
-    "interval_seconds": 30
+    "server_url": "http://127.0.0.1:5000/log",
+    "interval_seconds": 60
 }
